--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Problem Statement & Scope</h2>
                         <p class="text-white-50">
-                            Our goal with this project was to create a visual dashboard from data provided by NYCDDC. 
+                            Our goal with this project was to create a visual dashboard from data provided by NYS DEC. 
                             Wider visibility into diversion rates for specific material streams will encourage policymakers to support actions that increase CDW recycling by providing a scope of the opportunities present in the local recycled materials market.
                             
                         </p>
